[gd_scene load_steps=2 format=3 uid="uid://bo01t3qemib6n"]

[ext_resource type="Script" path="res://World/LevelManagement/Burst.gd" id="1"]

[node name="Burst" type="Node"]
script = ExtResource("1")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="NextTimer" type="Timer" parent="."]
one_shot = true

[node name="BurstTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="NextTimer" to="." method="_on_NextTimer_timeout"]
[connection signal="timeout" from="BurstTimer" to="." method="_on_BurstTimer_timeout"]
